; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/evdev/extr_evdev_mt.c_evdev_send_nfingers.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/evdev/extr_evdev_mt.c_evdev_send_nfingers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evdev_dev = type { i32 }

@evdev_fngmap = common dso_local global i32* null, align 8
@EV_KEY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evdev_dev*, i64)* @evdev_send_nfingers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @evdev_send_nfingers(%struct.evdev_dev* %0, i64 %1) #0 {
  %3 = alloca %struct.evdev_dev*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.evdev_dev* %0, %struct.evdev_dev** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.evdev_dev*, %struct.evdev_dev** %3, align 8
  %7 = call i32 @EVDEV_LOCK_ASSERT(%struct.evdev_dev* %6)
  %8 = load i64, i64* %4, align 8
  %9 = load i32*, i32** @evdev_fngmap, align 8
  %10 = call i64 @nitems(i32* %9)
  %11 = icmp ugt i64 %8, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32*, i32** @evdev_fngmap, align 8
  %14 = call i64 @nitems(i32* %13)
  store i64 %14, i64* %4, align 8
  br label %15

15:                                               ; preds = %12, %2
  store i64 0, i64* %5, align 8
  br label %16

16:                                               ; preds = %34, %15
  %17 = load i64, i64* %5, align 8
  %18 = load i32*, i32** @evdev_fngmap, align 8
  %19 = call i64 @nitems(i32* %18)
  %20 = icmp ult i64 %17, %19
  br i1 %20, label %21, label %37

21:                                               ; preds = %16
  %22 = load %struct.evdev_dev*, %struct.evdev_dev** %3, align 8
  %23 = load i32, i32* @EV_KEY, align 4
  %24 = load i32*, i32** @evdev_fngmap, align 8
  %25 = load i64, i64* %5, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = load i64, i64* %4, align 8
  %29 = load i64, i64* %5, align 8
  %30 = add i64 %29, 1
  %31 = icmp eq i64 %28, %30
  %32 = zext i1 %31 to i32
  %33 = call i32 @evdev_send_event(%struct.evdev_dev* %22, i32 %23, i32 %27, i32 %32)
  br label %34

34:                                               ; preds = %21
  %35 = load i64, i64* %5, align 8
  %36 = add i64 %35, 1
  store i64 %36, i64* %5, align 8
  br label %16

37:                                               ; preds = %16
  ret void
}

declare dso_local i32 @EVDEV_LOCK_ASSERT(%struct.evdev_dev*) #1

declare dso_local i64 @nitems(i32*) #1

declare dso_local i32 @evdev_send_event(%struct.evdev_dev*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
